--- a/air-bnb-clone/src/Search.css
+++ b/air-bnb-clone/src/Search.css
@@ -3,20 +3,29 @@
     top: 35px;
     left: 25%;
     width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .search > h2{
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: space-between;
     width: 559px;
     padding: 10px;
     background-color: white;
-    position: absolute;
-    left: 0;
-    top: 380px;
-}
+    margin-left:50%;
+     position: absolute;  
+    left: 100;
+    top: 280px; }
 
+ .bottom{
+     display: flex;
+     flex-direction: column;
+     background-color: white;
+ }
 
 .search > input {
     width: 539px;
