--- a/air-bnb-clone/src/Search.css
+++ b/air-bnb-clone/src/Search.css
@@ -1,5 +1,5 @@
 .search{
-    /* position: absolute; */
+    position: absolute;
     top: 35px;
     left: 25%;
     width: 100vw;
@@ -7,7 +7,36 @@
     flex-direction: column;
     align-items: center;
 }
+.search > div{
+    
+}
 
+.search__bottom{
+     
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-between;
+    width: 559px;
+    padding: 10px;
+    background-color: white;
+     
+     position: absolute;  
+    left: 100;
+    top: 280px;
+}
+.search__bottom > button{
+    border: 2px solid red;
+    background-color: #ff7779;
+    color: white;
+    width: 579px;
+    margin-top: 15px;
+}
+.search__bottom > button:hover{
+    background-color: white;
+    color: #ff7779;
+
+}
 .search > h2{
     display: flex;
     flex-direction: column;
@@ -21,11 +50,7 @@
     left: 100;
     top: 280px; }
 
- .bottom{
-     display: flex;
-     flex-direction: column;
-     background-color: white;
- }
+ 
 
 .search > input {
     width: 539px;
